--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: PYTHONPATH=. nosetests test/
+script: PYTHONPATH=. nosetests test/ -v --with-coverage --cover-package=wextractor --cover-erase
